openshift trying to fix icons

--- a/dsf4openshift/initial-setup/customizeOpenshift/stylesheet/icons.css
+++ b/dsf4openshift/initial-setup/customizeOpenshift/stylesheet/icons.css
@@ -1,19 +1,3 @@
-/*******************************************************************************
- * Copyright 2015-2018 Capgemini SE.
- * 
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- * 
- *      http://www.apache.org/licenses/LICENSE-2.0
- * 
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- ******************************************************************************/
-
 #header-logo {
   background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-openshift.png");
   width: 230px;
@@ -28,6 +12,13 @@
 
 .devonfw-logo {
   background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw.png");
+  width: 50px;
+  height: 50px;
+}
+
+span.devonfw-angular-logo{
+  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-angular.png");
+  content: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-angular.png");
   width: 50px;
   height: 50px;
 }
